--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -33,7 +33,7 @@
 
   <div class="register mt-5">
       <button class="mb-3 btn btn-dark w-25 " id="SignIN" [disabled]="loginForm.invalid" >Login</button>
-      <p class="text-center text-white-50">Don't have a account <a id="register" [routerLink]="'/auth/register'" style="cursor: pointer;" class="text-light text-decoration-underline">Register</a></p>
+      <p class="text-center text-white">Don't have a account <a id="register" [routerLink]="'/auth/register'" style="font-size: 20px;" class="text-light text-decoration-underline">Register</a></p>
   </div>
 </form>
 </div>
