--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       class="Senses  container d-flex flex-column-reverse flex-md-row align-items-center">
       <div class="Feast d-flex flex-column fade-in">
           <small>Feast Your Senses</small>
-          <h1>Bon Appetit:
+          <h1 class="Bon">Bon Appetit:
               <span>Explore Culinary</span>Creations
           </h1>
           <p>Your ultimate destination for all things food!
@@ -29,7 +29,7 @@
               our user friendly platform caters to all levels of
               expertise, ensuring everyone can saver the joy of
               creating delicious meals</p>
-          <a  class="red-btn Order Now " (click)="navigateDetails()">Order Now<i class="bi bi-arrow-right"></i></a>
+          <a  class="red-btn Order Now " style="cursor: pointer;"  (click)="navigateDetails()">Order Now<i  class="bi bi-arrow-right"></i></a>
       </div>
   </div>
 </section>
