--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
        <div class="inner-container">
            <div class="destination">
                <div>
-               <img src="../../assets/images/Logo.svg" class="img-fluid" alt="">
+               <img src="../../assets/images/pngtree-chef-restaurant-logo-png-image_6136204.png" class="img-fluid" alt="">
            </div>
                <p>Your ultimate destination for all things food! Explore our extensive
                    collection of mouthwatering recipies.</p>
