--- a/src/app/feature/details/delete/delete.component.html
+++ b/src/app/feature/details/delete/delete.component.html
@@ -1,7 +1,7 @@
 <div class="container" >
   <div class="popup">
   <div class="popupItem" #popup>
-<h6>{{"you are okay for Delete This ?"|uppercase}}</h6>
+<h6>{{"you are okay for Delete This Recipe?"|uppercase}}</h6>
 <div class="d-flex gap-2 pb-5">
   <button type="button" class="btn btn-danger" (click)="onConfirmDelete()">Delete</button>
   <button type="button" class="btn btn-dark" (click)="onClose()">close</button>
