--- a/src/app/feature/details/details.component.scss
+++ b/src/app/feature/details/details.component.scss
@@ -1,4 +1,4 @@
-.sec{
+.sec8{
   margin-top: 50px;
 .notation{
   display: flex;
@@ -56,7 +56,19 @@ button {
 
 
 }
+.search-icon {
+  font-size: 1.2rem;
+  cursor: pointer;
+}
 
+.search-input {
+  transition: all 0.4s ease;
+  padding: 0 0.5rem;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #000;
+  border-radius: 5px;
+}
 .text-white {
   font-size: 1.2rem;
 }
