--- a/src/app/feature/details/view-notes/deleted/deleted.component.html
+++ b/src/app/feature/details/view-notes/deleted/deleted.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="popup">
     <div class="popupItem">
-      <h6>{{ "Are you sure you want to delete this note?" | uppercase }}</h6>
+      <h6>{{ "Are you sure you want to delete this Recipe?" | uppercase }}</h6>
       <div class="d-flex gap-2 pb-5">
         <button type="button" class="btn btn-danger" (click)="onConfirmDelete()">OK</button>
         <button type="button" class="btn btn-dark" (click)="onClose()">Cancel</button>
