--- a/src/app/feature/details/view-notes/view-notes.component.html
+++ b/src/app/feature/details/view-notes/view-notes.component.html
@@ -1,5 +1,5 @@
 <section class="bg-dark h-100 d-flex flex-column gap-5 py-5">
-  <h1 class="text-white text-center">Note Details</h1>
+  <h1 class="text-white text-center">Recipe Details</h1>
   <div class="text-white d-flex flex-column gap-5">
     <h3>Description</h3>
     <div class="d-flex justify-content-evenly">
