--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -62,7 +62,9 @@
   justify-content: center;
   transition: background-color 0.4s ease-out;
 }
-
+.sec .Senses .Feast ul li .Order i{
+  pointer-events: none;
+}
 .red-btn {
   background-color: #FF2626;
   padding-inline: 2rem;
@@ -129,7 +131,6 @@ h3 {
   font-size: 24px;
   line-height: 33.6px;
   font-family: bold;
-  color: #171717;
 }
  .sec3 .season p {
   font-size: 16px;
@@ -158,7 +159,6 @@ h3 {
   line-height: 36px;
   font-size: 24px;
   font-family: SemiBold;
-  color: #000000;
 }
  .sec4 .offer p {
   font-family: Medium;
