--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-sm">
     <div class="container-sm container-fluid collect">
       <div class="swap-nav">
-      <a class="navbar-brand" routerLink="Home" [routerLinkActive]="'active'"><img src="../../assets/images/Logo.svg" alt=""></a>
+      <a class="navbar-brand" routerLink="Home" [routerLinkActive]="'active'"><img src="../../assets/images/pngtree-chef-restaurant-logo-png-image_6136204.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-text-right"></i>
       </button>
@@ -20,7 +20,10 @@
         </ul>
       </div>
       </div>
-     <button  [ngClass]="{'btn':true,'btn-danger':true}" (click)="navigateLogin()">logOut</button>
+      <div class="d-flex  align-items-center  gap-4">
+      <app-theme-toggle></app-theme-toggle>
+     <button  [ngClass]="{'btn':true,'btn-danger':true}" (click)="logout()">logOut</button>
+    </div>
     </div>
   </nav>
   </header>
